--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
       rel="stylesheet"
     />
 
-    <title>Zadanie domowe №4</title>
+    <title>Zadanie domowe №5</title>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
@@ -53,26 +53,33 @@
           <h1 class="title_button_h1">Something to hide</h1>
           <ul class="title_button">
             <li class="TB_list">
-              <button class="shadow" type="button ">Wszystkie</button>
+              <button class="TB_list_shadow" type="button ">Wszystkie</button>
             </li>
             <li class="TB_list">
-              <button class="shadow" type="button">Strony</button>
+              <button class="TB_list_shadow" type="button">Strony</button>
             </li>
             <li class="TB_list">
-              <button class="shadow" type="button">Aplikacje</button>
+              <button class="TB_list_shadow" type="button">Aplikacje</button>
             </li>
             <li class="TB_list">
-              <button class="shadow" type="button">Dizajn</button>
+              <button class="TB_list_shadow" type="button">Dizajn</button>
             </li>
             <li class="TB_list">
-              <button class="shadow" type="button">Marketing</button>
+              <button class="TB_list_shadow" type="button">Marketing</button>
             </li>
           </ul>
           <ul class="portfolio_list">
             <li class="Port_list">
-              <a class="shadow" href="#">
+              <a class="Port_list_shadow" href="#">
                 <div class="Port_list_overlay_hidden">
                   <img src="images/technocrack.jpg" alt="technocrack" />
+                  <div class="Port_list_overlay">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+                      koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków
+                      na niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
                 </div>
                 <div class="Port_list_TextDiv">
                   <h3 class="Port_list_h3">Technocrack</h3>
@@ -81,9 +88,16 @@
               </a>
             </li>
             <li class="Port_list">
-              <a class="shadow" href="#">
+              <a class="Port_list_shadow" href="#">
                 <div class="Port_list_overlay_hidden">
                   <img src="images/GNOvsGS.jpg" alt="Grafika New Orlean vs Golden Star" />
+                  <div class="Port_list_overlay">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+                      koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków
+                      na niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
                 </div>
                 <div class="Port_list_TextDiv">
                   <h3 class="Port_list_h3">Grafika New Orlean vs Golden Star</h3>
@@ -92,9 +106,16 @@
               </a>
             </li>
             <li class="Port_list">
-              <a class="shadow" href="#">
+              <a class="Port_list_shadow" href="#">
                 <div class="Port_list_overlay_hidden">
                   <img src="images/restauracja_seafood.jpg" alt="Restauracja Seafood" />
+                  <div class="Port_list_overlay">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+                      koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków
+                      na niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
                 </div>
                 <div class="Port_list_TextDiv">
                   <h3 class="Port_list_h3">Restauracja Seafood</h3>
@@ -103,9 +124,16 @@
               </a>
             </li>
             <li class="Port_list">
-              <a class="shadow" href="#">
+              <a class="Port_list_shadow" href="#">
                 <div class="Port_list_overlay_hidden">
                   <img src="images/projekt_prime.jpg" alt="Projekt Prime" />
+                  <div class="Port_list_overlay">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+                      koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków
+                      na niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
                 </div>
                 <div class="Port_list_TextDiv">
                   <h3 class="Port_list_h3">Projekt Prime</h3>
@@ -114,9 +142,16 @@
               </a>
             </li>
             <li class="Port_list">
-              <a class="shadow" href="#">
+              <a class="Port_list_shadow" href="#">
                 <div class="Port_list_overlay_hidden">
                   <img src="images/projekt_boxes.jpg" alt="Projekt Boxes" />
+                  <div class="Port_list_overlay">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+                      koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków
+                      na niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
                 </div>
                 <div class="Port_list_TextDiv">
                   <h3 class="Port_list_h3">Projekt Boxes</h3>
@@ -125,9 +160,16 @@
               </a>
             </li>
             <li class="Port_list">
-              <a class="shadow" href="#">
+              <a class="Port_list_shadow" href="#">
                 <div class="Port_list_overlay_hidden">
                   <img src="images/IHN_borders.jpg" alt="Inspiration has no Borders" />
+                  <div class="Port_list_overlay">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+                      koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków
+                      na niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
                 </div>
                 <div class="Port_list_TextDiv">
                   <h3 class="Port_list_h3">Inspiration has no Borders</h3>
@@ -136,9 +178,16 @@
               </a>
             </li>
             <li class="Port_list">
-              <a class="shadow" href="#">
+              <a class="Port_list_shadow" href="#">
                 <div class="Port_list_overlay_hidden">
                   <img src="images/limited_edition.jpg" alt="Magazyn Limited Edition" />
+                  <div class="Port_list_overlay">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+                      koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków
+                      na niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
                 </div>
                 <div class="Port_list_TextDiv">
                   <h3 class="Port_list_h3">Magazyn Limited Edition</h3>
@@ -147,9 +196,16 @@
               </a>
             </li>
             <li class="Port_list">
-              <a class="shadow" href="#">
+              <a class="Port_list_shadow" href="#">
                 <div class="Port_list_overlay_hidden">
                   <img src="images/projekt_LAB.jpg" alt="Projekt LAB" />
+                  <div class="Port_list_overlay">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+                      koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków
+                      na niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
                 </div>
                 <div class="Port_list_TextDiv">
                   <h3 class="Port_list_h3">Projekt LAB</h3>
@@ -158,9 +214,16 @@
               </a>
             </li>
             <li class="Port_list">
-              <a class="shadow" href="#">
+              <a class="Port_list_shadow" href="#">
                 <div class="Port_list_overlay_hidden">
                   <img src="images/groving_business.jpg" alt="Growing Business" />
+                  <div class="Port_list_overlay">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+                      koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków
+                      na niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
                 </div>
                 <div class="Port_list_TextDiv">
                   <h3 class="Port_list_h3">Growing Business</h3>
