changes in what we do section

--- a/index.html
+++ b/index.html
@@ -115,13 +115,22 @@
           <h2 class="what_we_do_h2">Czym się zajmujemy</h2>
           <ul class="what_we_do_list">
             <li class="WWD_list">
-              <img src="images/wht_w_d_1.jpg" alt="Praca pszy komputerze" width="370" />
+              <div class="WWD_list_box">
+                <img src="images/wht_w_d_1.jpg" alt="Praca pszy komputerze" />
+                <p class="WWD_list_p">APLIKACJE KOMPUTEROWE</p>
+              </div>
             </li>
             <li class="WWD_list">
-              <img src="images/wht_w_d_2.jpg" alt="Praca pszy Telefonie" width="370" />
+              <div class="WWD_list_box">
+                <img src="images/wht_w_d_2.jpg" alt="Praca pszy Telefonie" />
+                <p class="WWD_list_p">APLIKACJE MOBILNE</p>
+              </div>
             </li>
             <li class="WWD_list">
-              <img src="images/wht_w_d_3.jpg" alt="Praca pszy tablecie" width="370" />
+              <div class="WWD_list_box">
+                <img src="images/wht_w_d_3.jpg" alt="Praca pszy tablecie" />
+                <p class="WWD_list_p">ROZWIĄZANIA GRAFICZNE</p>
+              </div>
             </li>
           </ul>
         </div>
