--- a/portfolio.html
+++ b/portfolio.html
@@ -32,13 +32,13 @@
           </ul>
         </nav>
         <div class="header_contact">
-          <a class="header_link header_kontact_link" href="mailto:info@devstudio.com">
+          <a class="header_link icon_link_color" href="mailto:info@devstudio.com">
             <svg class="header_contact_icon" width="16" height="12">
               <use href="images/icons.svg#icon-envelope"></use>
             </svg>
             info@devstudio.com
           </a>
-          <a class="header_link header_kontact_link" href="tel:+48111111111">
+          <a class="header_link icon_link_color" href="tel:+48111111111">
             <svg class="header_contact_icon" width="10" height="16">
               <use href="images/icons.svg#icon-smartphone"></use>
             </svg>
