--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
           </ul>
         </nav>
         <div class="header_contact">
-          <a class="header_link header_kontact_link" href="mailto:info@devstudio.com">
+          <a class="header_link icon_link_color" href="mailto:info@devstudio.com">
             <svg class="header_contact_icon" width="16" height="12">
               <use href="images/icons.svg#icon-envelope"></use>
             </svg>
             info@devstudio.com
           </a>
-          <a class="header_link header_kontact_link" href="tel:+48111111111">
+          <a class="header_link icon_link_color" href="tel:+48111111111">
             <svg class="header_contact_icon" width="10" height="16">
               <use href="images/icons.svg#icon-smartphone"></use>
             </svg>
@@ -180,25 +180,25 @@
                 <ul class="social-media-box">
                   <li>
                     <a href="#" class="social-media"
-                      ><svg class=".fill_currentColor_svg" width="20" height="20">
+                      ><svg width="20" height="20">
                         <use href="images/icons.svg#icon-instagram-2"></use></svg
                     ></a>
                   </li>
                   <li>
                     <a href="#" class="social-media"
-                      ><svg class=".fill_currentColor_svg" width="20" height="20">
+                      ><svg width="20" height="20">
                         <use href="images/icons.svg#icon-twitter-1"></use></svg
                     ></a>
                   </li>
                   <li>
                     <a href="#" class="social-media"
-                      ><svg class=".fill_currentColor_svg" width="20" height="20">
+                      ><svg width="20" height="20">
                         <use href="images/icons.svg#icon-facebook-1"></use></svg
                     ></a>
                   </li>
                   <li>
                     <a href="#" class="social-media"
-                      ><svg class=".fill_currentColor_svg" width="20" height="20">
+                      ><svg width="20" height="20">
                         <use href="images/icons.svg#icon-linkedin-1"></use></svg
                     ></a>
                   </li>
@@ -279,44 +279,44 @@
         <div class="container">
           <h2 class="our_team_h2">Nasi klienci</h2>
           <ul class="aur_clients">
-            <li class="aur_clients-a">
+            <li class="aur_clients-li">
               <a href="#" class="aur_clients-a">
-                <svg class=".fill_currentColor_svg" width="106" height="60">
+                <svg width="106" height="60">
                   <use href="images/icons.svg#icon-Logo"></use>
                 </svg>
               </a>
             </li>
             <li class="aur_clients-li">
               <a href="#" class="aur_clients-a">
-                <svg class=".fill_currentColor_svg" width="106" height="60">
+                <svg width="106" height="60">
                   <use href="images/icons.svg#icon-Logo-1"></use>
                 </svg>
               </a>
             </li>
             <li class="aur_clients-li">
               <a href="#" class="aur_clients-a">
-                <svg class=".fill_currentColor_svg" width="106" height="60">
+                <svg width="106" height="60">
                   <use href="images/icons.svg#icon-Logo-2"></use>
                 </svg>
               </a>
             </li>
             <li class="aur_clients-li">
               <a href="#" class="aur_clients-a">
-                <svg class=".fill_currentColor_svg" width="106" height="60">
+                <svg width="106" height="60">
                   <use href="images/icons.svg#icon-Logo-5"></use>
                 </svg>
               </a>
             </li>
             <li class="aur_clients-li">
               <a href="#" class="aur_clients-a">
-                <svg class=".fill_currentColor_svg" width="106" height="60">
+                <svg width="106" height="60">
                   <use href="images/icons.svg#icon-Logo-3"></use>
                 </svg>
               </a>
             </li>
             <li class="aur_clients-li">
               <a href="#" class="aur_clients-a">
-                <svg class=".fill_currentColor_svg" width="106" height="60">
+                <svg width="106" height="60">
                   <use href="images/icons.svg#icon-Logo-4"></use>
                 </svg>
               </a>
@@ -380,7 +380,11 @@
     </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button type="button" class="close-btn" data-modal-close></button>
+        <button type="button" class="close-btn" data-modal-close>
+          <svg width="11" height="11">
+            <use href="images/icons.svg#icon-close-black-18dp-2-1-1"></use>
+          </svg>
+        </button>
       </div>
     </div>
     <script src="./js/modal.js"></script>
